--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <title>Personas Network Graph</title>
   </head>
   <body>
-   <iframe width="100%" height="300" src="//jsfiddle.net/bmposnick/grqujhv9/69/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+   <iframe width="100%" height="100%" src="//jsfiddle.net/bmposnick/grqujhv9/69/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 </html>
