--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <title>Personas Network Graph</title>
   </head>
   <body>
-   <iframe width="100%" height="1200" src="//jsfiddle.net/bmposnick/grqujhv9/74/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+   <script async src="//jsfiddle.net/bmposnick/grqujhv9/88/embed/result/"></script>
 </html>
